cmake_minimum_required(VERSION 3.20)
project(Tutosh_Bucky)

set(CMAKE_CXX_STANDARD 14)

add_executable(Tutosh_Bucky main.cpp TutorialClasses/Recursion/Recursion.cpp TutorialClasses/Recursion/Recursion.h TutorialClasses/ArrayOps/ArrayOps.cpp TutorialClasses/ArrayOps/ArrayOps.h TutorialClasses/ConstantExample/ConstantExample.cpp TutorialClasses/ConstantExample/ConstantExample.h TutorialClasses/MemberInitExample/MemberInitExample.cpp TutorialClasses/MemberInitExample/MemberInitExample.h TutorialClasses/Templating/Templating.tpp TutorialClasses/Templating/Templating.h TutorialClasses/OperatorOverload/OperatorOverload.cpp TutorialClasses/OperatorOverload/OperatorOverload.h TutorialClasses/InheritanceExample/ParentClass.cpp TutorialClasses/InheritanceExample/ParentClass.h TutorialClasses/InheritanceExample/ChildClass.cpp TutorialClasses/InheritanceExample/ChildClass.h)
